added gallery section

--- a/index.html
+++ b/index.html
@@ -48,9 +48,44 @@
       </div>
     </section>
     <!-- SECTION 2 -->
-    <section class="section-2"></section>
+    <section class="section-2">
+      <div class="container">
+        <h2>Our Best Destinations</h2>
+        <div class="gallery">
+          <div class="img-card img-card1">
+            <div class="img-card-text">
+              <p>Nusa Mountains</p>
+              <span>Columbia</span>
+            </div>
+          </div>
+          <div class="img-card img-card2">
+            <div class="img-card-text">
+              <p>Nusa Mountains</p>
+              <span>Columbia</span>
+            </div>
+          </div>
+          <div class="img-card img-card3">
+            <div class="img-card-text">
+              <p>Nusa Mountains</p>
+              <span>Columbia</span>
+            </div>
+          </div>
+          <div class="img-card img-card4">
+            <div class="img-card-text">
+              <p>Nusa Mountains</p>
+              <span>Columbia</span>
+            </div>
+          </div>
+        </div>
+        <button class="button btn-small">Load More</button>
+      </div>
+    </section>
     <!-- SECTION 3 -->
-    <section class="section-3"></section>
+    <section class="section-3">
+      <div class="container">
+        <h1>test</h1>
+      </div>
+    </section>
   </main>
   
 
