--- a/index.html
+++ b/index.html
@@ -83,7 +83,18 @@
     <!-- SECTION 3 -->
     <section class="section-3">
       <div class="container">
-        <h1>test</h1>
+        <div class="email-alert">
+          <div class="email-details">
+            <h3>
+              <span>Be First Updated with our <br> Newest Destination across <br> the Whole World</span>
+            </h3>
+            <p>It is a long established fact that a reader will be distracted by the <br> readable content of a page when looking at its layout. </p>
+            <div class="form-group">
+              <input type="text">
+              <button class="button">Subscribe</button>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </main>
