--- a/index.html
+++ b/index.html
@@ -98,6 +98,32 @@
       </div>
     </section>
   </main>
+
+  <!-- FOOTER -->
+  <footer>
+    <div class="container">
+      <div class="footer-top">
+        <ul class="footer-links">
+          <li><a href="#!">Home</a></li>
+          <li><a href="#!">Destination</a></li>
+          <li><a href="#!">Blogs</a></li>
+          <li><a href="#!">Contacts</a></li>
+        </ul>
+        <ul class="footer-icons">
+          <li><a href="#!"><img src="./img/icon-facebook.svg" alt="facebook"></a></li>
+          <li><a href="#!"><img src="./img/icon-linkedin.svg" alt="linkedin"></a></li>
+          <li><a href="#!"><img src="./img/icon-instagram.svg" alt="instagram"></a></li>
+        </ul>
+      </div>
+      <div class="footer-bottom">
+        <ul class="privacy-links">
+          <li><a href="#!">Privacy Policy</a></li>
+          <li><a href="#!">Terms of Service</a></li>
+        </ul>
+        <p>© 2022 TravelBUDS</p>
+      </div>
+    </div>
+  </footer>
   
 
   <script src="./app.js"></script>
